css/style.css
/* ... */
#popup-demo {
    /*margin-top: 100px; */
    background-color: indianred;
    border: 1px red solid;
    width: 60px;
    min-height: 93px;
    max-width: 80%;
    max-height: 80%;
    padding: 20px;
    position: fixed;
    opacity: 0;
    visibility: hidden;

}
/*#popup-demo a {
    position: fixed;
    background: rgba(0, 0, 0, 0.3);
    transition: opacity 500ms;
    visibility: hidden;
    opacity: 0;
    z-index: 3;
} */

#popup-demo:target {
    visibility: visible;
    opacity: 1;
}
#inner-userpic img {
    display: block;
}

#login img {

    display: block;
}

#slider-wrap {
    margin: 0 auto;
    max-height: 560px;
}
#slider-wrap-popularseries {
    margin-top: 200px;
    width: 100%;
    height: 500px;
}
.slider-header-book {
    padding-bottom: 150px;
}
/*#slider {*/
    /*margin-top: 50px;*/
/*}*/
#slider-popular {
    margin-top: 50px;
}

/*  ----    */
/*.slide-picture + img {
    opacity: 0;
    position: absolute;
    transition: opacity 0.5s  ;
}*/
.slide-picture + .popular_book {
    opacity: 0;
    position: absolute;
    transition: opacity 0.5s;
}
.slide-picture:checked + .popular_book {
    opacity: 1;
}

.slide-picture + .inner-slider {
    opacity: 0;
    position: absolute;
    transition: opacity 0.5s ;
}

.inner-slide {
    margin-bottom: 80px;
    /*width: 100%;*/
    /*position: absolute;*/
}

.slide-picture:checked + img {
    opacity: 1;
}

.slide-picture:checked + .inner-slider {
    opacity: 1;
}
.inner-login-form {
    margin-top: 55px;
}
.inner-checkbox-remember label {
    padding-left: 35px;
}
.inner-checkbox-remember {
    float: left;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #45474b;
    display: inline-block;
    font-weight: 500;
}


.forgot-password {
    float: right;
    font-weight: 500;
    /*width: 120px;*/
    display: block;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #45474b;
    /*margin: 0 54px 0 54px; */
}

#login-form {
    position: relative;
    width: 1210px;
}
.sign-in input:hover {
    background-color: #da8913;
    color: white;
    transition: color 0.5s ease;
}

.sign-in {
    padding-bottom: 60px;
    text-align: center;
    padding-top: 60px;
}
.sign-in input {
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    font-weight: 500;
    color: #45474b;
    border: 2px solid #45474b;
    background-color: white;
    padding: 10px 56px 10px 56px;
    /*width: 100px;*/
    /*margin: 50px 150px 80px 150px; */
}
.input-create {
    margin: 0 110px 40px 110px;
    display: block;
    text-align: center;
    border-bottom: 2px solid #45474b;
    font-size: 16px;
    color: #45474b;
    font-family: 'Lato', sans-serif;
    font-weight: 500;
    transition: color 0.5s ease;
}

.input-create:hover {
    color: #da8913;
    border-bottom: 2px solid #da8913;
}

.input-create img {
    padding: 0 0 0 15px;
}

.arrow-button:focus {
    border: none;
    outline: none;
}

.arrow-button {
    border: none;
    background-color: white;
}

.inner-login-social {
    width: 100%;
    margin: 0 auto;
    padding-top: 15px;
    /*border-top: 1px solid #959ba1;*/
}

.inner-login-social h3 {
    margin-top: 30px;
    text-align: center;
}
.login-social {
    margin: 0 auto;
    width: 172px;
}
.login-social a {
    padding: 0 20px 0 20px;
}
.inner-login-email {
    margin-top: 85px;
}
.inner-login-email input {
    border: none;
    border-bottom: 1px solid #45474b;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #959ba1;
    width: 100%;
}
.inner-login-email input:focus {
    outline: none;
}
.inner-login-password {
    /*margin-top: 43px;
    margin-bottom: 36px;*/
}
.inner-login-password input {
    padding-top: 55px;
    border: none;
    box-sizing: border-box;
    width: 100%;
    border-bottom: 1px solid #45474b;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #959ba1;
}
.inner-login-password input:focus {
    outline: none;
}
#wrap-login {
    z-index: 505;
    background: white;
    margin: 0 auto;
    box-shadow:0 7px 24px #8F8C8D;
    /*margin: 280px 375px 0 375px;*/
    max-width: 460px;
    height: auto;
    position: absolute;
    opacity: 0;
    visibility: hidden;
    top: 300px;
    left: 50%;
    transform: translate(-50%);
}
.inner-wrap-container {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    background: #ffffffb5;
    width: 100%;
    height: 100%;
    z-index: 499;
    overflow: auto;
}
.inner-wrap-login {
    margin: 75px 50px;
}
#wrap-login .transp-back-wrap-login {
    width: 460px;
    height: 803px;
    margin-top: -88px;
    margin-left: -67px;
    position: absolute;
    opacity: 0.9;
    z-index: -1;
    box-shadow: 0 5px 7px #8F8C8D;
    background-color: white;

}
.rectangle-arrow {
    z-index: 4;
    left: 402px;
    position: absolute;
    top: 45px;
}

/*#wrap-login:target {*/
    /*visibility: visible;*/
    /*opacity: 1;*/
/*}*/
#wrap-login.open {
    visibility: visible;
    opacity: 1;
}

.wrap-login-substrate {
    left: 20px;
    top: 20px;
    z-index: 8;
    height: 755px;
    box-shadow: 0px 0px 10px #8F8C8D;
    width: 460px;
    position: absolute;
}

#wrap-login p {
    /*padding-top: 75px;*/
    text-align: center;
    font-family: 'Ramaraja', serif;
    font-size: 42px;
    color: #555963;
}
.cover1 {
    box-shadow: 0 0 50px rgba(0,0,0,0.5);
    top: 74px;
    left: 11px;
    position: absolute;
}
.cover2 {
    box-shadow: 0 0 50px rgba(0,0,0,0.5);
    top: 34px;
    left: 25px;
    position: absolute;
}
.cover3 {
    box-shadow: 0 0 50px rgba(0,0,0,0.5);
    position: absolute;

}

.del input {
    border: none;
}
.add input {
    border: none;
}
.tr-container:nth-child(3){
    margin: 10px 0 10px 0;
}
.tr-container {
    display: table-row;
}

/* slider --- */ /*  --------   after delete ---- */

/* #anna-wrap-sl {
    margin-top: 100px;
}

.r {
    position: absolute;
}
/* ... */

